feat: add CORS configuration for cross-origin resource sharing