@@ -10,8 +10,11 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.servlet.config.annotation.CorsRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Set;
 
 @Slf4j
 @Configuration
@@ -21,18 +24,24 @@ public class CorsConfig implements WebMvcConfigurer {
     private String allowedOrigins;
 
     private List<String> getAllowedOriginsList() {
-        if (allowedOrigins == null || allowedOrigins.isBlank()) {
-            return List.of(
-                    // "http://localhost:5173",
-                    // "http://localhost:5174",
-                    "https://yovexa-solutions-frontend.vercel.app",
-                    "https://yovexa-solutions-backend.vercel.app");
+        Set<String> origins = new LinkedHashSet<>(Arrays.asList(
+                "https://yovexa-solutions-frontend.vercel.app",
+                "https://yovexa-solutions-backend.vercel.app",
+                "http://localhost:5173",
+                "http://localhost:5174",
+                "http://localhost:8080",
+                "http://localhost:8081",
+                "http://localhost:3000"
+        ));
+
+        if (allowedOrigins != null && !allowedOrigins.isBlank()) {
+            Arrays.stream(allowedOrigins.split(","))
+                    .map(String::trim)
+                    .map(s -> s.endsWith("/") ? s.substring(0, s.length() - 1) : s)
+                    .filter(s -> !s.isBlank())
+                    .forEach(origins::add);
         }
-        return Arrays.stream(allowedOrigins.split(","))
-                .map(String::trim)
-                .map(s -> s.endsWith("/") ? s.substring(0, s.length() - 1) : s)
-                .filter(s -> !s.isBlank())
-                .toList();
+        return new ArrayList<>(origins);
     }
 
     @Bean
@@ -42,6 +51,12 @@ public class CorsConfig implements WebMvcConfigurer {
         log.info("Configuring CORS with allowed origins: {}", origins);
 
         configuration.setAllowedOrigins(origins);
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+                "https://*.vercel.app",
+                "http://localhost:*",
+                "http://127.0.0.1:*",
+                "*"
+        ));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"));
         configuration.setAllowedHeaders(Arrays.asList("*"));
         configuration.setExposedHeaders(
@@ -59,9 +74,15 @@ public class CorsConfig implements WebMvcConfigurer {
         List<String> origins = getAllowedOriginsList();
         registry.addMapping("/**")
                 .allowedOrigins(origins.toArray(new String[0]))
+                .allowedOriginPatterns(
+                        "https://*.vercel.app",
+                        "http://localhost:*",
+                        "http://127.0.0.1:*",
+                        "*"
+                )
                 .allowedMethods("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD")
                 .allowedHeaders("*")
-                .exposedHeaders("Authorization")
+                .exposedHeaders("Authorization", "Access-Control-Allow-Origin", "Access-Control-Allow-Credentials")
                 .allowCredentials(true)
                 .maxAge(3600);
     }
